# meta-signal-orchestrate

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  skills.md
schema/: lib.schema  meta-signal-orchestrate.concept.schema  owner-signal-orchestrate.concept.schema
src/: lib.rs
src/schema/: lib.rs
tests/: round_trip.rs  schema_contract.rs
