[package]
name         = "meta-signal-orchestrate"
version      = "0.5.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/meta-signal-orchestrate"
description  = "MetaSignal contract for privileged orchestrate role, session/lane lifecycle, and repository administration."
publish      = false
links        = "meta-signal-orchestrate"
build        = "build.rs"

[lib]
name = "meta_signal_orchestrate"
path = "src/lib.rs"

[features]
default   = ["nota-text"]
nota-text = ["signal-orchestrate/nota-text", "signal-frame/nota-text"]

[dependencies]
signal-frame                = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
signal-orchestrate = { git = "https://github.com/LiGoldragon/signal-orchestrate.git", rev = "f5e54e81018e1293ee1c830570b8af7ca5e2c8b8" } # contention-flow-mvp: flip back to branch = "main" at train integration
nota                   = { git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
rkyv                        = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror                   = "2"

[build-dependencies]
schema-rust = { git = "https://github.com/LiGoldragon/schema-rust.git", rev = "bc964c4f2945a637890192f0623db851f8320c27" }

[dev-dependencies]
schema = { git = "https://github.com/LiGoldragon/schema.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
