[package]
name         = "meta-signal-orchestrate"
version      = "0.5.2"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/meta-signal-orchestrate"
description  = "MetaSignal contract for privileged orchestrate role, session/lane lifecycle, and repository administration."
publish      = false
links        = "meta-signal-orchestrate"
build        = "build.rs"

[lib]
name = "meta_signal_orchestrate"
path = "src/lib.rs"

[features]
default   = ["nota-text"]
nota-text = ["signal-orchestrate/nota-text", "signal-frame/nota-text"]

[dependencies]
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", rev = "91e675298b79ec2aab2e0714a5e3e5b2d6d07339", default-features = false }
signal-orchestrate = { git = "https://github.com/LiGoldragon/signal-orchestrate.git", rev = "c4fd61db287e643cf15afe22a5f5d5b30a578320" }
nota = { git = "https://github.com/LiGoldragon/nota.git", rev = "ce7c564de0a0518eaa1938d55dccc460a67cadb4" }
rkyv                        = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror                   = "2"

[build-dependencies]
schema-rust = { git = "https://github.com/LiGoldragon/schema-rust.git", rev = "384337d1313df19b77641ac7240fcd2fc6864f54" }

[dev-dependencies]
schema = { git = "https://github.com/LiGoldragon/schema.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
